--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -18,14 +18,14 @@
     <div class="container container--position">
 
       <%# Logo %>
-      <%= image_tag image_path('logo-beta.svg'), alt: 'Westfield', "data-svg-fallback" => image_path('logo-beta.png'), class: 'national__logo' %>
+      <%= image_tag image_path('logo-white-beta.svg'), alt: 'Westfield', "data-svg-fallback" => image_path('logo-white-beta.png'), class: 'national__logo' %>
       <%# //Logo %>
 
       <%# Hero heading wrap %>
       <div class="national__heading__intro">
         <h1>
           <span><%= @centres.length %> centres. Over 10,300 stores. Over <%= number_with_delimiter(@products_count, separator: ',') %> products</span>
-          Happy Valentine's Day
+          Autumn Winter 2014
         </h1>
       </div>
       <%# //Hero heading wrap %>
