remove aria attributes which are redundant now pjax is used

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -160,7 +160,7 @@
         <% if @active_category %>
           <div class="stores-maps__filters-count">
             <div class="container">
-              <p aria-atomic="true" aria-live="polite"><span class="icon icon--pin icon--flush-top"></span><%= @stores.count %> Results found</p>
+              <p><span class="icon icon--pin icon--flush-top"></span><%= @stores.count %> Results found</p>
             </div>
           </div>
         <% end %>
