--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -25,7 +25,7 @@
           <dl class="drop-down-menu__list">
             <% @nearby_centres.each do |nearby_centre| %>
               <dd class="drop-down-menu__divider">
-                <%= link_to nearby_centre.short_name, centre_products_path({centre_id: nearby_centre}), class: 'btn btn--full btn--full-left' %>
+                <%= link_to nearby_centre.short_name, centre_products_path({centre_id: nearby_centre.code}), class: 'btn btn--full btn--full-left' %>
               </dd>
             <% end %>
           </dl>
@@ -37,7 +37,7 @@
               <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
               <% @nearby_centres[state].each do |centre| %>
                 <dd class="drop-down-menu__divider">
-                  <%= link_to centre.short_name, centre_products_path(centre_id: centre), class: 'btn btn--full btn--full-left' %>
+                  <%= link_to centre.short_name, centre_products_path(centre_id: centre.code), class: 'btn btn--full btn--full-left' %>
                 </dd>
               <% end %>
             <% end %>
