--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -20,26 +20,26 @@
       <%# //Centre selector trigger %>
 
       <%# Centre selector target %>
-      <% if not @is_national %>
+      <% if national %>
+        <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="no-products-nearby-centre">
+          <dl class="drop-down-menu__list">
+            <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
+              <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
+              <% @centres[state].each do |centre| %>
+                <dd class="drop-down-menu__divider">
+                  <%= link_to centre.short_name, centre_products_path(centre_id: centre.code), class: 'btn btn--full btn--full-left' %>
+                </dd>
+              <% end %>
+            <% end %>
+          </dl>
+        </div>
+      <% else %>
         <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="no-products-nearby-centre">
           <dl class="drop-down-menu__list">
             <% @nearby_centres.each do |nearby_centre| %>
               <dd class="drop-down-menu__divider">
                 <%= link_to nearby_centre.short_name, centre_products_path({centre_id: nearby_centre.code}), class: 'btn btn--full btn--full-left' %>
               </dd>
-            <% end %>
-          </dl>
-        </div>
-      <% else %>
-         <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="no-products-nearby-centre">
-          <dl class="drop-down-menu__list">
-            <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
-              <dt class="drop-down-menu__hdr-sub drop-down-menu__divider"><%= state %></dt>
-              <% @nearby_centres[state].each do |centre| %>
-                <dd class="drop-down-menu__divider">
-                  <%= link_to centre.short_name, centre_products_path(centre_id: centre.code), class: 'btn btn--full btn--full-left' %>
-                </dd>
-              <% end %>
             <% end %>
           </dl>
         </div>
