--- a/app/views/layouts/_tile.html.erb
+++ b/app/views/layouts/_tile.html.erb
@@ -1,7 +1,7 @@
 <article class="tile tile--<%= result.kind.pluralize %> box js-tile test-tile" role="article">
 
   <%# Tile indentifier for centre home page only %>
-  <% unless params[:controller] == result.kind.pluralize %>
+  <% if tile_heading? %>
     <h2 class="hide-visually"><%= result.kind.titlecase %></h2>
   <% end %>
   <%# //Tile indentifier for centre home page only %>
