--- a/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
+++ b/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
@@ -20,7 +20,7 @@
 
   /* Set common colour */
   &,
-  .icon:before {color: $color-txt-light;}
+  .no-content-fallback-msg__icon:before {color: $color-txt-light;}
 
   em,
   span {display: block;}
@@ -36,8 +36,7 @@
   .drop-down-container {
     margin: 0 auto;
     @include to-rem(max-width, $drop-down-width);
-
-    .drop-down-menu__trigger {@include to-rem(margin-top, $spacing-third);}
+    @include to-rem(margin-top, $spacing-third);
   }
 
     /* 'No content/search results' text */
