Fixes to national vs not national

--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -4,7 +4,7 @@
       <div class="container drop-down-container" ng-controller="GlobalSearchCtrl" ng-cloak>
 
         <%# Search form %>
-        <%= form_tag (national_product_view? ? products_path : centre_products_path(centre_id: params[:centre_id] || params[:id])),
+        <%= form_tag (national_product_index? ? products_path : centre_products_path(centre_id: params[:centre_id] || params[:id])),
             "ng-submit" => "submit($event)",
             class: "search-mini",
             role: "search",
@@ -16,11 +16,11 @@
           <%# //Icon %>
 
           <%# Label and inputs %>
-          <label for="global-search" class="hide-visually">Search<%= 'stores &amp;'.html_safe unless national_product_view? %> products</label>
+          <label for="global-search" class="hide-visually">Search<%= 'stores &amp;'.html_safe unless national_product_index? %> products</label>
           <input type="hidden" ng-model="centre" value="<%= params[:centre_id] || params[:id] %>">
 
           <%# We do don need the search suggest to trigger on natinal pages %>
-          <% if national_product_view? %>
+          <% if national_product_index? %>
             <input type="search" class="search-mini__input" name="search_query" autocomplete="off" placeholder="Search products&#8230;">
           <% else %>
             <input ng-model="searchQuery" ng-blur="hideSuggestions()" ng-focus="makeSuggestions()" ng-keyup="makeSuggestions($event)" ng-keydown="navigateSuggestions($event)" type="search" class="search-mini__input" id="global-search" name="search_query" autocomplete="off" placeholder="Search stores &amp; products&#8230;">
@@ -30,7 +30,7 @@
           <%# //Label and inputs %>
 
           <%# Search results total for screen readers %>
-          <% unless national_product_view? %>
+          <% unless national_product_index? %>
             <em role="status" aria-live="polite" class="hide-visually">
               <span ng-if="suggestions" ng-pluralize count="{{suggestions.stores.length + suggestions.products.length}}" when="searchResultText()"></span>
             </em>
@@ -41,7 +41,7 @@
         <%# //Search form %>
 
         <%# Search results %>
-        <% unless national_product_view? %>
+        <% unless national_product_index? %>
           <div class="search-results drop-down" ng-show="suggestionsVisible">
             <div class="search-results__inner">
               <dl class="search-results__list">
@@ -71,7 +71,7 @@
         <%# //Search results %>
 
         <%# Search close button for palm %>
-        <button type="button" class="btn header__overlay__close-btn<%= ' hide-fully--non-palm'.html_safe unless national_product_view? %> js-disabled-hide" aria-owns="site-search" toggle-visibility="site-search">
+        <button type="button" class="btn header__overlay__close-btn<%= ' hide-fully--non-palm'.html_safe unless national_product_index? %> js-disabled-hide" aria-owns="site-search" toggle-visibility="site-search">
           <span class="hide-visually">Close search</span>
           <span class="icon icon--close-lrg" aria-hidden="true"></span>
         </button>
