--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -118,7 +118,7 @@
       <%# //Search toggle %>
 
       <%# Global search %>
-      <%= render partial: 'layouts/global_search' %>
+      <%= render partial: 'layouts/global_search' if national_product_index? %>
       <%# //Global search %>
 
 		</div>
