Update to new Normalize CSS - WSF-6251

--- a/app/assets/stylesheets/partials/utils/_reset.scss
+++ b/app/assets/stylesheets/partials/utils/_reset.scss
@@ -96,6 +96,7 @@ ol,
 ul {list-style: none;}
 
 /* Set consistent focus styles (adding to 'Normalize -> Links' rules) */
+a,
 input,
 button,
 select,
