Cleanup all commenting for CSS to be inline with CSS Guidelines - WSF-6095

--- a/app/assets/stylesheets/partials/forms/_layout.scss
+++ b/app/assets/stylesheets/partials/forms/_layout.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-	Usage: These styles handle a typical form layout which is linear (label above input(s) i.e. stacked) for small viewports and side by side (label and input(s) aligned horizontally) for larger viewports.
+	Usage: these styles handle a typical form layout which is linear (label above input(s) i.e. stacked) for small viewports and side by side (label and input(s) aligned horizontally) for larger viewports.
 
 	Basic HTML anatomy:
 		<form class="form-main">
