--- a/app/assets/stylesheets/partials/modules/_centre-location.scss
+++ b/app/assets/stylesheets/partials/modules/_centre-location.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  Contains the Google static map of the centre and the centre address
+  Contains the Google static map of the centre and the centre address.
 
   Styleguide Centre Location
 */
