--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -3,14 +3,9 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Filters and sorting, used for browsing 'Products'.
+  Usage: Filters and sorting, used for browsing 'Products'.
 
-  Note:
-    A lot of styles are being used from the 'Drop down menu' module.
-
-  Demo:
-    Style Guide -> Modules -> Filters
+  Note: a lot of styles are being used from the 'Drop down menu' module.
 */
 
 .filters {
