--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -3,17 +3,12 @@
    ====================================================================================== */
 
 /*
-	Usage:
-		'Stores' section of the site, layout for both listing and detail views and any other 'Stores' specific styling.
+	Usage: 'Stores' section of the site, layout for both listing and detail views and any other 'Stores' specific styling.
 
-  Notes:
-    Modules that live here:
+  Note: modules that live here:
     -  Stores list
     -  Storefront
     -  Micello maps
-
-	Demo:
-		Style Guide -> Modules -> Stores / Maps
 */
 
 /* `body` element */
