--- a/app/assets/stylesheets/styleguide/partials/base/_headings.scss
+++ b/app/assets/stylesheets/styleguide/partials/base/_headings.scss
@@ -1,7 +1,7 @@
 /* ======================================================================================
-   @BASE -> @HEADINGS
+   @BASE -> HEADINGS
    ====================================================================================== */
-/* Shared rules */
+
 .sg-h1,
 .sg-h2,
 .sg-h3 {@include to-rem(margin-bottom, $spacing-half);}
