--- a/app/assets/stylesheets/styleguide/partials/modules/_example.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_example.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  Container around each example within each section
+  Container around each example within each section.
 */
 
 .sg-example {
