--- a/app/assets/stylesheets/styleguide/partials/modules/_intro.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_intro.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  Intro section with heading and description about the page
+  Intro section with heading and description about the page.
 */
 
 .sg-intro {
