--- a/app/assets/stylesheets/styleguide/partials/modules/_modifier.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_modifier.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  For sectioning modifier examples
+  For sectioning modifier examples.
 */
 
 .sg-modifier {
