--- a/app/assets/stylesheets/styleguide/partials/modules/_section.scss
+++ b/app/assets/stylesheets/styleguide/partials/modules/_section.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  For separating style guide into logical groups
+  For separating style guide into logical groups.
 */
 
 .sg-section {
