--- a/app/assets/stylesheets/styleguide/partials/utils/_overrides.scss
+++ b/app/assets/stylesheets/styleguide/partials/utils/_overrides.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  Overrides site CSS for the purpose of showing examples in the style guide
+  Overrides site CSS for the purpose of showing examples in the style guide.
 */
 
 /* Site feedback button */
