--- a/app/assets/stylesheets/partials/abstractions/_flag.scss
+++ b/app/assets/stylesheets/partials/abstractions/_flag.scss
@@ -3,8 +3,14 @@
    ====================================================================================== */
 
 /*
-  Usage: place any image- and text-like content side-by-side with vertical alignment.
+  Place any image- and text-like content side-by-side with vertical alignment.
 
+  .flag--shrink-wrap          - Shrink wrap.
+
+  Styleguide Flag
+*/
+
+/*
   Note: same as the 'Slat' abstraction but we get vertical alignment.
 
   Credit: http://csswizardry.com/2013/05/the-flag-object/
