--- a/app/assets/stylesheets/partials/modules/_map-google-static.scss
+++ b/app/assets/stylesheets/partials/modules/_map-google-static.scss
@@ -3,17 +3,11 @@
    ====================================================================================== */
 
 /*
-  Usage:
-    Renders a static Google map.
+  Usage: renders a static Google map.
 
-  Note:
-    Hides the Google static map image as it gets applied as a background image (but done via `style` block on the page).
+  Note: hides the Google static map image as it gets applied as a background image (but done via `style` block on the page).
 
-  Demo:
-    Style Guide -> Modules -> Google Map Static
-
-  Credit:
-    http://webdesigntutsplus.s3.amazonaws.com/tuts/365_google_maps/demo/index.html
+  Credit: http://webdesigntutsplus.s3.amazonaws.com/tuts/365_google_maps/demo/index.html
 */
 
 .map-google-static {
