--- a/app/assets/stylesheets/styleguide/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/styleguide/partials/utils/_vars.scss
@@ -1,4 +1,7 @@
 /* ======================================================================================
    @VARIABLES
    ====================================================================================== */
+
+/* [BREAKPOINTS]
+-------------------------------------------------------*/
 $sg-breakpoint: 890;
