--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -17,7 +17,7 @@
         <div class="container">
 
           <%# Small screen view %>
-          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-white btn--main-compact-icon js-maintain-store-filter">
+          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-white btn--main-compact-icon js-maintain-store-filter js-pjax-link-stores js-pjax-view-stores">
             <span class="hide-visually--palm">View stores</span>
             <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
           </a>
