--- a/app/views/styleguide/index.html.erb
+++ b/app/views/styleguide/index.html.erb
@@ -6,73 +6,21 @@
 
   <h2 class="sg-h1">Westfield Style Guide</h2>
 
-  <div class="sg-section">
-    <div class="grid grid--gutter-dbl">
-      <!-- Default Element Styles -->
-      <div class="grid__item non-palm-one-half">
-        <div class="sg-section">
-          <div class="sg-h2"><%= link_to 'Base', styleguide_path('base') %></div>
-          <p>All default elements e.g. paragraphs, links, headings, images, etc. are given base styles that define how the element should look in all occurrences on the page. Base styles include setting heading sizes, default link styles, default font styles, etc.</p>
-        </div>
+  <% Styleguide::TREE.in_groups_of(2, false) do |styleguides| %>
+    <div class="sg-section">
+      <div class="grid grid--gutter-dbl">
+        <% styleguides.each do |styleguide| %>
+          <% slug = ActiveSupport::Inflector.parameterize(styleguide['title']) %>
+          <div class="grid__item non-palm-one-half">
+            <div class="sg-section">
+              <div class="sg-h2"><%= link_to styleguide['title'], styleguide_path(slug) %></div>
+              <p><%=raw styleguide['description'] %></p>
+            </div>
+          </div>
+        <% end -%>
       </div>
-      <!-- //Default Element Styles -->
-
-      <!-- Abstractions -->
-      <div class="grid__item non-palm-one-half">
-        <div class="sg-section">
-          <div class="sg-h2"><%= link_to 'Abstractions', styleguide_path('abstractions') %></div>
-          <p>An abstraction is a CSS methodology that basically removes a pattern from a specific idea and makes a more generic idea out of it e.g. make a list render horizontally. They exist to avoid writing the same similar patterns over and over, instead create a single more generic representation of those patterns and reuse that instead.</p>
-        </div>
-      </div>
-      <!-- //Abstractions -->
     </div>
-  </div>
+  <% end %>
 
-  <div class="sg-section">
-    <div class="grid grid--gutter-dbl">
-      <!-- Modules -->
-      <div class="grid__item non-palm-one-half">
-        <div class="sg-h2"><%= link_to 'Modules', styleguide_path('modules') %></div>
-        <p>Modules are the discrete components of the page e.g. carousel, tabs, pagination, etc. This is the meat of the page.</p>
-      </div>
-      <!-- //Modules -->
-
-      <!-- Grid -->
-      <div class="grid__item non-palm-one-half">
-        <div class="sg-h2"><%= link_to 'Grid', styleguide_path('grid') %></div>
-        <p>A responsive grid used for the site structure and for any other layouts. The grid is fluid meaning it can easily resize itself to fit into different screen sizes and adjustments have been made using <a href="http://reference.sitepoint.com/css/mediaqueries" rel="external">CSS3 Media Queries</a> so the grid will fit nicely into smaller screen sizes.</p>
-      </div>
-      <!-- //Grid -->
-    </div>
-  </div>
-
-  <div class="sg-section">
-    <div class="grid grid--gutter-dbl">
-      <!-- Form Patterns -->
-      <div class="grid__item non-palm-one-half">
-        <div class="sg-h2"><%= link_to 'Form patterns', styleguide_path('form-patterns') %></div>
-        <p>Each form especially complex forms are made up of different form elements e.g. checkboxes, radio inputs, file uploads, etc. and these form elements can have different layouts. The form patterns page shows all the available patterns 'out of the box' including validation.</p>
-      </div>
-      <!-- //Form Patterns -->
-
-      <!-- Buttons -->
-      <div class="grid__item non-palm-one-half">
-        <div class="sg-h2"><%= link_to 'Buttons', styleguide_path('buttons') %></div>
-        <p>All of the different button styles.</p>
-      </div>
-      <!-- //Buttons -->
-    </div>
-  </div>
-
-  <div class="sg-section">
-    <div class="grid grid--gutter-dbl">
-      <!-- Helpers -->
-      <div class="grid__item non-palm-one-half">
-        <div class="sg-h2"><%= link_to 'Helpers', styleguide_path('helpers') %></div>
-        <p>Helpers are a bunch of classes to apply very common styles to elements and modules e.g. make text right aligned, apply the base bottom margin to an element, etc. They're to be used arbitrarily i.e. only if an element/module doesn't already have a class to which you could apply this styling.</p>
-      </div>
-      <!-- //Helpers -->
-    </div>
-  </div>
 </div>
 <!-- //Container narrow-->
