--- a/app/views/styleguide/_styleguide_intro.html.erb
+++ b/app/views/styleguide/_styleguide_intro.html.erb
@@ -1,6 +1,6 @@
 <div class="sg-intro">
   <div class="container container--narrow">
     <h2 class="sg-h1 sg-intro__heading"><%= title %></h2>
-    <p><%= description %></p>
+    <p><%=raw description %></p>
   </div>
 </div>
