--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -759,9 +759,6 @@ $national-view-search-toggle-bp: 1080 !default;
 							position: relative;
 							top: 1px;
 						}
-
-						/* Old IE */
-						@include old-ie {position: relative;}
 					}
 				}
 		}
@@ -775,12 +772,7 @@ $national-view-search-toggle-bp: 1080 !default;
 
 				@include respond-min($desk-lrg) {
 					/* Hide when in drop down */
-					.header--hero .nav-social-tertiary-container & {
-						display: none;
-
-						/* Old IE */
-						@include old-ie {display: block;}
-					}
+					.header--hero .nav-social-tertiary-container & {display: none;}
 
 					.nav-sub-container & {
 						display: block;
@@ -789,9 +781,6 @@ $national-view-search-toggle-bp: 1080 !default;
 						right: 0;
 						@include translateY(-50%);
 						margin-bottom: 0;
-
-						/* Old IE */
-						@include old-ie {display: none;}
 
 						a:hover,
 						a:focus {
@@ -907,9 +896,6 @@ $national-view-search-toggle-bp: 1080 !default;
 				}
 
 				.no-js & {@include to-rem(top, $spacing-base);}
-
-				/* Old IE - fix for not supporting `translate` */
-				@include old-ie {@include to-rem(top, 16);}
 
 				.icon:before {
 					@include font-size(20, 1);
@@ -1286,9 +1272,6 @@ $national-view-search-toggle-bp: 1080 !default;
 						top: 50%;
 						@include translateY(-50%);
 						@include to-rem(padding, 6 $spacing-third);
-
-						/* Old IE */
-						@include old-ie {@include to-rem(top, 2);}
 
 						/* National view header */
 						.header--national & {
