--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -268,9 +268,6 @@
       @include to-em(padding-top, $spacing-half);
       border-top: 0;
       box-shadow: inset 0 5px 5px -5px rgba(#000, 0.4);
-
-      /* Old IE */
-      @include old-ie {border-top: 1px solid $color-grey-med-3;}
     }
   }
 
@@ -328,12 +325,7 @@
           .icon {
 
             &,
-            &:before {
-              display: block;
-
-              /* Old IE */
-              @include old-ie {display: none;}
-            }
+            &:before {display: block;}
 
             &:before {color: $color-grey-med-3;}
           }
