--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -63,9 +63,8 @@
       .drop-down-menu--alt & {@include to-rem(width, 170);}
     }
 
-    /* Reduce the top margin for IE 9/8 */
-    .ie-9 &,
-    .old-ie & {@include to-rem(margin-top, 4);}
+    /* Reduce the top margin for IE 9 */
+    .ie-9 & {@include to-rem(margin-top, 4);}
 
     /* Override default width */
     &.drop-down-menu__target--alt-width-palm {@include to-rem(width, $drop-down-width);}
@@ -159,14 +158,13 @@
       /* IE 10 */
       @include ie-10-up {top: -8px;}
 
-      /* Hide for IE 9/8 and non JS users */
+      /* Hide for IE 9 and non JS users */
 
       /*
         Note: it is okay to use `!important` here as we're doing it pre-emptively i.e. you know you will always want the rule it's applied too to take precedence.
       */
 
       .ie-9 &,
-      .old-ie &,
       .no-js & {display: none !important;}
     }
 
