--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -108,9 +108,8 @@
           /* JS users - want to show the drop down when the Angular `.ng-hide` is not on the element */
           .js &:not(.ng-hide) {display: block;}
 
-          /* Reduce the top margin for IE 9/8 */
-          .ie-9 &,
-          .old-ie & {@include to-rem(margin-top, 4);}
+          /* Reduce the top margin for IE 9 */
+          .ie-9 & {@include to-rem(margin-top, 4);}
         }
       }
 
